--- a/styles/_navbar.scss
+++ b/styles/_navbar.scss
@@ -7,27 +7,22 @@
     width: 100%;
     font-weight: 700;
     font-size: 1.2rem;
-    // height: 100px;
-    // background: #f3f3f3;
+    height: 110px;
 
-    .navbar-brand {
-        margin-left: 150px;
+    .container {
+        max-width: 960px;
 
-        // width: 150px;
-        // font-size: 24px;
-
-        img {
-            // float: left;
-            height: 50px;
-            margin-right: 7px;
+        .navbar-brand {
+            img {
+                height: 50px;
+                margin-right: 7px;
+            }
         }
-    }
 
-    .navbar-nav {
-        margin-left: auto;
-
-        .nav-item {
-            margin: 0 30px;
+        .navbar-nav {
+            margin-left: auto;
+            width: 60%;
+            justify-content: space-between;
         }
     }
 }
@@ -47,4 +42,5 @@
 .scrolled {
     padding: 0.5rem 1rem !important;
     background-color: #f3f3f3 !important;
+    height: 65px !important;
 }
