--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,7 @@
 }
 
 .navbar.navbar-expand-lg .container {
-  max-width: 960px;
+  max-width: 90%;
 }
 
 .navbar.navbar-expand-lg .container .navbar-brand img {
@@ -20,18 +20,10 @@
 }
 
 .navbar.navbar-expand-lg .container .navbar-nav {
-  margin-left: auto;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  margin: 10px 0;
-}
-
-@media (min-width: 992px) {
-  .navbar.navbar-expand-lg .container .navbar-nav {
-    width: 60%;
-    margin: 0 0 0 auto;
-  }
+  margin: 1rem 0 1rem auto;
 }
 
 .navbar.navbar-expand-lg.scrolled {
@@ -55,20 +47,40 @@
   margin-top: 0;
 }
 
-a {
-  color: inherit;
+#footer {
+  margin-top: 4rem;
+  background: lightgrey;
 }
 
-section {
-  min-height: 100vh;
+#footer .row .col-md-3 {
+  display: -ms-grid;
+  display: grid;
+  margin: 1rem;
+  text-align: center;
 }
 
-.h-200 {
-  height: 200px;
+#footer .row .col-md-3 h5 {
+  margin: 0;
+  padding: 1rem 0;
 }
 
-.h-300 {
-  height: 300px;
+#footer .row .col-md-3 ul {
+  padding: 0;
+}
+
+#footer .row .col-md-3 ul li {
+  padding-bottom: 0.5rem;
+}
+
+#footer #copyright {
+  height: 75px;
+  margin: auto;
+  border-top: solid 1px black;
+}
+
+#footer #copyright p {
+  display: inline-block;
+  margin: auto;
 }
 
 #home {
@@ -85,7 +97,7 @@ section {
 }
 
 #home .container {
-  max-width: 960px;
+  max-width: 90%;
   margin-bottom: 5vw;
 }
 
@@ -98,19 +110,23 @@ section {
   padding: 1rem 1.5rem;
 }
 
-#what-is-sumunara .card {
+#what-is-sumunara .col-lg-4 {
+  margin: 1rem 0;
+}
+
+#what-is-sumunara .col-lg-4 .card {
   border: none;
   width: 90%;
   margin: auto;
 }
 
-#what-is-sumunara .card .card-img-top {
+#what-is-sumunara .col-lg-4 .card .card-img-top {
   margin: auto;
-  width: 50%;
+  width: 30%;
 }
 
 #areas .container .col-lg-6 {
-  margin-top: 20px;
+  margin-bottom: 3rem;
 }
 
 #areas .container .col-lg-6 .media {
@@ -120,6 +136,7 @@ section {
 #areas .container .col-lg-6 .media img {
   border-radius: 10px;
   max-width: 400px;
+  padding: 0;
 }
 
 #areas .container .col-lg-6 .media .media-body {
@@ -135,64 +152,127 @@ section {
   margin-top: 15px;
 }
 
-@media (min-width: 768px) {
+#summary {
+  width: 90%;
+  margin: 150px auto 30px;
+}
+
+#results #doughnut-chart-container {
+  margin-bottom: 1rem;
+}
+
+#results #stats h4 {
+  margin: 2rem 0;
+}
+
+#results #bar-charts-container {
+  margin-top: 30px;
+}
+
+@media screen and (min-width: 1200px) {
+  .navbar.navbar-expand-lg .container ul.navbar-nav {
+    width: 60%;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .navbar.navbar-expand-lg .container .navbar-nav {
+    width: 70%;
+    margin: 0 0 0 auto;
+  }
+  #what-is-sumunara .col-lg-4 .card .card-img-top {
+    width: 50%;
+  }
+}
+
+@media screen and (min-width: 768px) {
   #areas .container .col-lg-6 .media img {
     max-width: 250px;
   }
   #areas .container .col-lg-6 .media .media-body {
     margin-top: initial;
   }
-}
-
-@media (min-width: 992px) {
-  #areas .container {
-    margin: 2rem;
+  #footer .row .col-md-3 {
+    text-align: left;
+  }
+  #results .row.justify-content-around {
+    margin-bottom: 2rem;
+  }
+  #results #doughnut-chart-container {
+    margin-bottom: 0;
   }
 }
 
-#footer {
-  margin-top: 5rem;
-  background: lightgrey;
+.fade-in {
+  opacity: 0;
+  -webkit-transition: opacity 250ms;
+  transition: opacity 250ms;
 }
 
-#footer .row {
-  max-width: 960px;
+.fade-in.appear {
+  opacity: 1;
+  animation: fadeUp 2.5s cubic-bezier(0.19, 0.85, 0.05, 0.94);
+  -webkit-animation: fadeUp 2.5s cubic-bezier(0.19, 0.85, 0.05, 0.94);
+  -moz-animation: fadeUp 2.5s cubic-bezier(0.19, 0.85, 0.05, 0.94);
+  -o-animation: fadeUp 2.5s cubic-bezier(0.19, 0.85, 0.05, 0.94);
+  -ms-animation: fadeUp 2.5s cubic-bezier(0.19, 0.85, 0.05, 0.94);
 }
 
-#footer .row .col-sm-4 {
-  display: -ms-grid;
-  display: grid;
-  margin: 1rem 0;
+@keyframes fadeUp {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(150px);
+            transform: translateY(150px);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
 }
 
-#footer .row .col-sm-4 h5 {
+@-webkit-keyframes fadeUp {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(150px);
+            transform: translateY(150px);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+}
+
+body {
   margin: 0;
-  padding: 1rem 0;
 }
 
-#footer .row .col-sm-4 ul {
-  padding: 0;
+a {
+  color: inherit;
 }
 
-#footer .row .col-sm-4 ul li {
-  padding-bottom: 0.5rem;
+section {
+  min-height: 100vh;
 }
 
-#footer #copyright {
-  max-width: 960px;
-  height: 75px;
-  margin: auto;
-  border-top: solid 1px black;
+section:not(#home) {
+  margin-top: 2rem;
 }
 
-#footer #copyright p {
-  display: inline-block;
-  margin: auto;
+.h-100px {
+  height: 100px;
 }
 
-@media (min-width: 768px) {
-  #footer .row .col-sm-4 {
-    margin: 1rem;
-  }
+.h-200 {
+  height: 200px;
+}
+
+.h-300 {
+  height: 300px;
+}
+
+.container {
+  overflow: hidden;
 }
 /*# sourceMappingURL=style.css.map */
