Change file names, styles, and add results.html

--- a/styles/_index.scss
+++ b/styles/_index.scss
@@ -20,7 +20,7 @@
     }
 }
 
-// Section - What is sumunara
+// Section - What is Sumunara
 #what-is-sumunara {
     .col-lg-4 {
         margin: 1rem 0;
