--- a/styles/_mobile.scss
+++ b/styles/_mobile.scss
@@ -14,7 +14,7 @@
         margin: 0 0 0 auto;
     }
 
-    // Section - What is sumunara
+    // Section - What is Sumunara
     #what-is-sumunara .col-lg-4 .card .card-img-top {
         width: 50%;
     }
@@ -38,8 +38,8 @@
         text-align: left;
     }
 
-    // Results
-    #results {
+    // Details
+    #details {
         .row.justify-content-around {
             margin-bottom: 2rem;
         }
