--- a/styles/_details.scss
+++ b/styles/_details.scss
@@ -1,13 +1,18 @@
 // Details Summary
 #summary-container {
     width: 90%;
+    max-width: 1000px;
     margin: 160px auto 30px;
 }
 
 // Details
 #details {
+    max-width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
+
     #doughnut-chart-container {
-        margin-bottom: 1rem;
+        margin-bottom: 2rem;
     }
 
     #stats {
@@ -19,9 +24,47 @@
             font-size: 1.3rem;
             margin: 1rem 0;
         }
+
+        .bar-container {
+            width: 100%;
+            padding: 0;
+            background-color: $background-color;
+
+            #noise-score {
+                width: 50%;
+            }
+
+            #traffic-accident-score {
+                width: 60%;
+            }
+
+            #crime-score {
+                width: 80%;
+            }
+
+            .bar {
+                padding: 5px 5px 5px 1rem;
+                background-color: #4caf50;
+                color: white;
+            }
+        }
     }
 
-    #bar-charts-container {
-        margin-top: 30px;
+    #stats-details {
+        ul {
+            margin: 2rem auto;
+
+            .stats-title {
+                padding: 1rem 0;
+            }
+
+            li {
+                padding: 1rem;
+
+                &:nth-child(even) {
+                    background: rgba($color: $background-color, $alpha: 0.3);
+                }
+            }
+        }
     }
 }
