--- a/styles/_mobile.scss
+++ b/styles/_mobile.scss
@@ -30,6 +30,8 @@
 
         .media-body {
             margin-top: initial;
+            padding-left: 30px;
+            padding-right: 0;
         }
     }
 
@@ -51,9 +53,17 @@
 }
 
 // Tablets
-// @include screen-sm {
-// }
+@include screen-sm {
+    // Details
+    #details #stats-details ul li div.col {
+        padding-left: 50px;
+    }
+}
 
 // Smartphones
-// @include screen-xs {
-// }
+@include screen-xs {
+    // Section - Home
+    #home .container {
+        max-width: 100%;
+    }
+}
