--- a/styles/_navbar.scss
+++ b/styles/_navbar.scss
@@ -25,8 +25,8 @@
     }
 
     &.scrolled {
-        padding: 0 1rem !important;
-        background-color: #f3f3f3 !important;
+        padding: 5px 1.5rem !important;
+        background-color: $secondary-color !important;
     }
 }
 
