--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,600,700");
+@import url("https://fonts.googleapis.com/css?family=Catamaran:400,800");
 @import url("https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap");
 .navbar.navbar-expand-lg {
   z-index: 10;
@@ -28,8 +30,8 @@
 }
 
 .navbar.navbar-expand-lg.scrolled {
-  padding: 0 1rem !important;
-  background-color: #f3f3f3 !important;
+  padding: 5px 1.5rem !important;
+  background-color: #ee2222 !important;
 }
 
 .dropdown-toggle::after {
@@ -50,7 +52,7 @@
 
 #footer {
   margin-top: 4rem;
-  background: lightgrey;
+  background: lightgray;
 }
 
 #footer .row .col-md-3 {
@@ -58,6 +60,9 @@
   display: grid;
   margin: 1rem;
   text-align: center;
+  max-width: -webkit-fit-content;
+  max-width: -moz-fit-content;
+  max-width: fit-content;
 }
 
 #footer .row .col-md-3 h5 {
@@ -85,7 +90,7 @@
 }
 
 #home {
-  background: url("https://source.unsplash.com/1600x900/?fukuoka") fixed;
+  background: url("https://source.unsplash.com/zno8Yyobd30/1600x900") fixed;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -95,6 +100,7 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  max-width: unset;
 }
 
 #home .container {
@@ -111,6 +117,14 @@
   padding: 1rem 1.5rem;
 }
 
+#home .container .input-group .btn {
+  padding: 1rem;
+}
+
+#what-is-sumunara {
+  margin-top: 2rem;
+}
+
 #what-is-sumunara .col-lg-4 {
   margin: 1rem 0;
 }
@@ -124,6 +138,10 @@
 #what-is-sumunara .col-lg-4 .card .card-img-top {
   margin: auto;
   width: 30%;
+}
+
+#areas {
+  margin-top: 2rem;
 }
 
 #areas .container .col-lg-6 {
@@ -155,6 +173,7 @@
 
 #results-container {
   margin: 160px auto 30px;
+  max-width: 1000px;
 }
 
 #results-container li {
@@ -164,11 +183,18 @@
 
 #summary-container {
   width: 90%;
+  max-width: 1000px;
   margin: 160px auto 30px;
 }
 
+#details {
+  max-width: 1000px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 #details #doughnut-chart-container {
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
 }
 
 #details #stats h4 {
@@ -180,8 +206,207 @@
   margin: 1rem 0;
 }
 
-#details #bar-charts-container {
-  margin-top: 30px;
+#details #stats .bar-container {
+  width: 100%;
+  padding: 0;
+  background-color: lightgray;
+}
+
+#details #stats .bar-container #noise-score {
+  width: 50%;
+}
+
+#details #stats .bar-container #traffic-accident-score {
+  width: 60%;
+}
+
+#details #stats .bar-container #crime-score {
+  width: 80%;
+}
+
+#details #stats .bar-container .bar {
+  padding: 5px 5px 5px 1rem;
+  background-color: #4caf50;
+  color: white;
+}
+
+#details #stats-details ul {
+  margin: 2rem auto;
+}
+
+#details #stats-details ul .stats-title {
+  padding: 1rem 0;
+}
+
+#details #stats-details ul li {
+  padding: 1rem;
+}
+
+#details #stats-details ul li:nth-child(even) {
+  background: rgba(211, 211, 211, 0.3);
+}
+
+#error-container {
+  margin: 160px auto 30px;
+  min-height: auto;
+}
+
+.error-container {
+  text-align: center;
+  font-size: 106px;
+  font-family: "Catamaran", sans-serif;
+  font-weight: 800;
+  margin: 70px 15px;
+}
+
+.error-container > span {
+  display: inline-block;
+  position: relative;
+}
+
+.error-container > span.four {
+  width: 136px;
+  height: 43px;
+  border-radius: 999px;
+  background: linear-gradient(140deg, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.07) 43%, transparent 44%, transparent 100%), linear-gradient(105deg, transparent 0%, transparent 40%, rgba(0, 0, 0, 0.06) 41%, rgba(0, 0, 0, 0.07) 76%, transparent 77%, transparent 100%), linear-gradient(to right, #d89ca4, #e27b7e);
+}
+
+.error-container > span.four:before,
+.error-container > span.four:after {
+  content: "";
+  display: block;
+  position: absolute;
+  border-radius: 999px;
+}
+
+.error-container > span.four:before {
+  width: 43px;
+  height: 156px;
+  left: 60px;
+  bottom: -43px;
+  background: linear-gradient(128deg, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.07) 40%, transparent 41%, transparent 100%), linear-gradient(116deg, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.07) 50%, transparent 51%, transparent 100%), linear-gradient(to top, #99749d, #b895ab, #cc9aa6, #d7969e, #e0787f);
+}
+
+.error-container > span.four:after {
+  width: 137px;
+  height: 43px;
+  -webkit-transform: rotate(-49.5deg);
+          transform: rotate(-49.5deg);
+  left: -18px;
+  bottom: 36px;
+  background: -webkit-gradient(linear, left top, right top, from(#99749d), color-stop(#b895ab), color-stop(#cc9aa6), color-stop(#d7969e), to(#e0787f));
+  background: linear-gradient(to right, #99749d, #b895ab, #cc9aa6, #d7969e, #e0787f);
+}
+
+.error-container > span.zero {
+  vertical-align: text-top;
+  width: 156px;
+  height: 156px;
+  border-radius: 999px;
+  background: linear-gradient(-45deg, transparent 0%, rgba(0, 0, 0, 0.06) 50%, transparent 51%, transparent 100%), linear-gradient(to top right, #99749d, #99749d, #b895ab, #cc9aa6, #d7969e, #ed8687, #ed8687);
+  overflow: hidden;
+  -webkit-animation: bgshadow 5s infinite;
+          animation: bgshadow 5s infinite;
+}
+
+.error-container > span.zero:before {
+  content: "";
+  display: block;
+  position: absolute;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+  width: 90px;
+  height: 90px;
+  background-color: transparent;
+  left: 0px;
+  bottom: 0px;
+  background: linear-gradient(95deg, transparent 0%, transparent 8%, rgba(0, 0, 0, 0.07) 9%, transparent 50%, transparent 100%), linear-gradient(85deg, transparent 0%, transparent 19%, rgba(0, 0, 0, 0.05) 20%, rgba(0, 0, 0, 0.07) 91%, transparent 92%, transparent 100%);
+}
+
+.error-container > span.zero:after {
+  content: "";
+  display: block;
+  position: absolute;
+  border-radius: 999px;
+  width: 70px;
+  height: 70px;
+  left: 43px;
+  bottom: 43px;
+  background: #fdfaf5;
+  -webkit-box-shadow: -2px 2px 2px 0px rgba(0, 0, 0, 0.1);
+          box-shadow: -2px 2px 2px 0px rgba(0, 0, 0, 0.1);
+}
+
+.screen-reader-text {
+  position: absolute;
+  top: -9999em;
+  left: -9999em;
+}
+
+@-webkit-keyframes bgshadow {
+  0% {
+    -webkit-box-shadow: inset -160px 160px 0px 5px rgba(0, 0, 0, 0.4);
+            box-shadow: inset -160px 160px 0px 5px rgba(0, 0, 0, 0.4);
+  }
+  45% {
+    -webkit-box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, 0.1);
+            box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, 0.1);
+  }
+  55% {
+    -webkit-box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, 0.1);
+            box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, 0.1);
+  }
+  100% {
+    -webkit-box-shadow: inset 160px -160px 0px 5px rgba(0, 0, 0, 0.4);
+            box-shadow: inset 160px -160px 0px 5px rgba(0, 0, 0, 0.4);
+  }
+}
+
+@keyframes bgshadow {
+  0% {
+    -webkit-box-shadow: inset -160px 160px 0px 5px rgba(0, 0, 0, 0.4);
+            box-shadow: inset -160px 160px 0px 5px rgba(0, 0, 0, 0.4);
+  }
+  45% {
+    -webkit-box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, 0.1);
+            box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, 0.1);
+  }
+  55% {
+    -webkit-box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, 0.1);
+            box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, 0.1);
+  }
+  100% {
+    -webkit-box-shadow: inset 160px -160px 0px 5px rgba(0, 0, 0, 0.4);
+            box-shadow: inset 160px -160px 0px 5px rgba(0, 0, 0, 0.4);
+  }
+}
+
+/* demo stuff */
+.zoom-area {
+  max-width: 490px;
+  margin: 30px auto 30px;
+  font-size: 19px;
+  text-align: center;
+}
+
+.link-container {
+  text-align: center;
+}
+
+a.more-link {
+  text-transform: uppercase;
+  font-size: 13px;
+  background-color: #de7e85;
+  padding: 10px 15px;
+  border-radius: 0;
+  color: #fff;
+  display: inline-block;
+  margin-right: 5px;
+  margin-bottom: 5px;
+  line-height: 1.5;
+  text-decoration: none;
+  margin-top: 50px;
+  letter-spacing: 1px;
 }
 
 @media screen and (min-width: 1200px) {
@@ -206,6 +431,8 @@
   }
   #areas .container .col-lg-6 .media .media-body {
     margin-top: initial;
+    padding-left: 30px;
+    padding-right: 0;
   }
   #footer .row .col-md-3 {
     text-align: left;
@@ -215,6 +442,18 @@
   }
   #details #doughnut-chart-container {
     margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 576px) {
+  #details #stats-details ul li div.col {
+    padding-left: 50px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  #home .container {
+    max-width: 100%;
   }
 }
 
@@ -259,7 +498,9 @@
   }
 }
 
-body {
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   margin: 0;
   font-family: "Noto Sans JP", sans-serif;
 }
@@ -270,10 +511,6 @@ a {
 
 section {
   min-height: 100vh;
-}
-
-section:not(#home) {
-  margin-top: 2rem;
 }
 
 .h-100px {
