--- a/styles/_index.scss
+++ b/styles/_index.scss
@@ -1,6 +1,7 @@
 // Section - Home
 #home {
-    background: url("https://source.unsplash.com/zno8Yyobd30/1600x900") fixed;
+    background: url("https://source.unsplash.com/JXUfF7HYfMo/1600x900") fixed;
+    background-size: cover;
     display: flex;
     align-items: flex-end;
     justify-content: center;
