--- a/styles/style.scss
+++ b/styles/style.scss
@@ -5,6 +5,8 @@
 @import "./index";
 @import "./results";
 @import "./details";
+@import "./signup";
+@import "./login";
 @import "./error";
 @import "./mobile";
 @import "./animation";
