--- a/styles/_navbar.scss
+++ b/styles/_navbar.scss
@@ -8,6 +8,7 @@
     font-weight: 700;
     font-size: 1.2rem;
     background-color: #fff;
+    border-bottom: 1px solid gray;
 
     .container {
         max-width: 90%;
