--- a/styles/style.css
+++ b/styles/style.css
@@ -12,6 +12,7 @@
   font-weight: 700;
   font-size: 1.2rem;
   background-color: #fff;
+  border-bottom: 1px solid gray;
 }
 
 .navbar.navbar-expand-lg .container {
@@ -118,7 +119,7 @@
 
 #home .container {
   max-width: 90%;
-  margin-bottom: 5vw;
+  margin-bottom: 8vw;
 }
 
 #home .container .input-group {
@@ -132,6 +133,16 @@
 
 #home .container .input-group .btn {
   padding: 1rem;
+}
+
+#home .container #match-list {
+  position: absolute;
+  z-index: 9;
+}
+
+#home .container #match-list .suggestions {
+  background: #fff;
+  padding: 1rem 1.5rem;
 }
 
 #what-is-sumunara {
@@ -272,24 +283,43 @@
 
 #signup-container {
   margin: 160px auto 30px;
-  max-width: 550px;
+  max-width: 400px;
 }
 
-#signup-container .form-group #passwordHelpBlock {
+#signup-container #social-icons .btn {
+  width: 100%;
+  background: lightblue;
+  border: 1px solid black;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+#signup-container #social-icons .btn .fab {
+  font-size: 1.5rem;
+}
+
+#signup-container #social-icons .btn .col-10 {
+  text-align: left;
+}
+
+#signup-container #show-form-btn {
+  width: 100%;
+  margin-bottom: 2rem;
+  background: #dfe0df;
+}
+
+#signup-container #form-email {
   display: none;
 }
 
-#signup-container .form-group #inputPassword:focus + #passwordHelpBlock {
-  display: block;
-}
-
-#signup-container button {
+#signup-container #form-email button {
   background: #ffcb3c;
   width: 100%;
   margin-bottom: 1.5rem;
 }
 
-#signup-container p {
+#signup-container #form-email p {
   font-size: 14px;
 }
 
